// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsvImportFields matches snapshot for BMO 1`] = `
<div
  className="CsvImportFields-root-1"
>
  <p
    className="MuiTypography-root-3 MuiTypography-body1-12 MuiTypography-gutterBottom-30"
  >
    Fill out the following field
  </p>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-53 MuiFormLabel-filled-57 MuiInputLabel-root-42 MuiInputLabel-formControl-47 MuiInputLabel-animated-50 MuiInputLabel-shrink-49"
      data-shrink={true}
    >
      Currency
    </label>
    <div
      className="MuiInputBase-root-73 MuiInput-root-60 MuiInput-underline-64 MuiInputBase-formControl-74 MuiInput-formControl-61"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Currency"
        className="MuiInputBase-input-83 MuiInput-input-68"
        disabled={false}
        maxLength={6}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="CAD"
      />
    </div>
  </div>
</div>
`;

exports[`CsvImportFields matches snapshot for TD 1`] = `
<div
  className="CsvImportFields-root-1"
>
  <p
    className="MuiTypography-root-3 MuiTypography-body1-12 MuiTypography-gutterBottom-30"
  >
    A few things are missing from the CSV file
  </p>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-53 MuiInputLabel-root-42 MuiInputLabel-formControl-47 MuiInputLabel-animated-50"
      data-shrink={false}
    >
      Account
    </label>
    <div
      className="MuiInputBase-root-73 MuiInput-root-60 MuiInput-underline-64 MuiInputBase-formControl-74 MuiInput-formControl-61"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Account"
        className="MuiInputBase-input-83 MuiInput-input-68"
        disabled={false}
        maxLength={100}
        name="account"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
      />
    </div>
    <p
      className="MuiFormHelperText-root-90"
    >
      The name of the account (e.g. Checking, Savings, RRSP, etc)
    </p>
  </div>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-53 MuiFormLabel-filled-57 MuiInputLabel-root-42 MuiInputLabel-formControl-47 MuiInputLabel-animated-50 MuiInputLabel-shrink-49"
      data-shrink={true}
    >
      Currency
    </label>
    <div
      className="MuiInputBase-root-73 MuiInput-root-60 MuiInput-underline-64 MuiInputBase-formControl-74 MuiInput-formControl-61"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Currency"
        className="MuiInputBase-input-83 MuiInput-input-68"
        disabled={false}
        maxLength={6}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="CAD"
      />
    </div>
  </div>
</div>
`;

exports[`CsvImportFields matches snapshot for Tangerine 1`] = `
<div
  className="CsvImportFields-root-1"
>
  <p
    className="MuiTypography-root-3 MuiTypography-body1-12 MuiTypography-gutterBottom-30"
  >
    A few things are missing from the CSV file
  </p>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-53 MuiInputLabel-root-42 MuiInputLabel-formControl-47 MuiInputLabel-animated-50"
      data-shrink={false}
    >
      Account
    </label>
    <div
      className="MuiInputBase-root-73 MuiInput-root-60 MuiInput-underline-64 MuiInputBase-formControl-74 MuiInput-formControl-61"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Account"
        className="MuiInputBase-input-83 MuiInput-input-68"
        disabled={false}
        maxLength={100}
        name="account"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
      />
    </div>
    <p
      className="MuiFormHelperText-root-90"
    >
      The name of the account (e.g. Checking, Savings, RRSP, etc)
    </p>
  </div>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-53 MuiFormLabel-filled-57 MuiInputLabel-root-42 MuiInputLabel-formControl-47 MuiInputLabel-animated-50 MuiInputLabel-shrink-49"
      data-shrink={true}
    >
      Currency
    </label>
    <div
      className="MuiInputBase-root-73 MuiInput-root-60 MuiInput-underline-64 MuiInputBase-formControl-74 MuiInput-formControl-61"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Currency"
        className="MuiInputBase-input-83 MuiInput-input-68"
        disabled={false}
        maxLength={6}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="CAD"
      />
    </div>
  </div>
</div>
`;
